@@ -1,4 +1,3 @@
-SIGNATURE 
 Changes
 inc/Module/Install.pm
 inc/Module/Install/Base.pm
@@ -12,6 +11,8 @@ lib/Module/Refresh.pm
 Makefile.PL
 MANIFEST			This list of files
 META.yml
+SIGNATURE
 t/0-smoke.t
 t/1api.t
 t/2lateuse.t
+t/clear_symtable.t
