@@ -1,4 +1,6 @@
 
+ * Actually remove subroutines from the symbol table, Thanks to DOY.
+
 0.13 Thu May  3 23:03:00 EDT 2007
 
  * Requires 5.8.1. (Uses tricks that don't work on 5.6). Thanks to DCANTRELL
